# picus

./: .gitignore  README.md
c/: README.md
c/blink/: CMakeLists.txt  aya.c
c/stay-on/: CMakeLists.txt  stay-on.c
rust/: LICENSE  README.md
rust/blinky/: Cargo.toml  main.rs
rust/src/: main.rs
src/: main.rs
