[package]
name = "picus"
version = "0.0.1"
authors = ["Dr. Hunter Thompson Lockwood <hunterlockwood@gmail.com>"]
edition = "2018"
description = "A PICU ad pico, siderum arcana revelamus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
embedded-hal = "0.2.7"
panic-halt = "0.2.0"
rp-pico = "0.8.0"
